# AI_Assistant

./: .gitignore  README.md  fetch_events.py  pyproject.toml  pytest.ini  test_out.txt  test_payload.json
.agent/skills/ai-service-expert/: SKILL.md
.agent/skills/calendar-expert/: SKILL.md
backend/: .env.example  .env.lmstudio  .env.ollama  check_remote_ollama.py  debug_cal.py  requirements.txt  test_date_calc.py
backend/app/: main.py
backend/data/: user_profile.json
backend/scripts/: check_models.py  distill_history.py  index_travel.py  reauth.py  run_backend.ps1
backend/tests/: test_calendar_hotfix.py  test_date_calculation.py  test_executor_duplicates.py  test_memory_service.py  test_ollama.py
backend/verification/: verify_and_test.py  verify_memory.py  verify_refactor.py  verify_temporal.py
client/: pubspec.yaml
client/lib/: main.dart
client/test/: hybrid_router_test.dart  widget_test.dart
data/: user_profile.json
docs/: ai_context_guide.md  api_specification.md  dev_history.md  development_and_testing.md  getting_started.md  hybrid_memory_system.md  issues.md  overview.md  roadmap_and_model_evaluation.md  runbook.md  technical_stack.md  test-questions.md  test_questions.md  troubleshooting.md
docs/daily_logs/: 2026-01-16_calendar-deep-verification.md  2026-01-16_calendar-functionality-improvement.md  2026-01-16_init-antigravity-skills.md  2026-01-16_meeting-registration-stabilization.md  2026-01-16_meeting-summary-impl.md  2026-01-16_system-stability-gpu-optimization.md  2026-01-22_meeting-date-accuracy-timeout.md  2026-01-23_modernize-langchain-and-skills.md
scripts/: run_integration_scenario.py
(+88 files in other folders)
