[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "dateparser==1.2.2",
    "filetype==1.2.0",
    "google-ai-generativelanguage==0.9.0",
    "google-api-core==2.28.1",
    "google-auth==2.47.0",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain-core==1.2.6",
    "langchain-google-genai==3.2.0",
    "langsmith==0.6.1",
    "orjson==3.11.5",
    "packaging==25.0",
    "pip==25.0.1",
    "proto-plus==1.27.0",
    "protobuf==6.33.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.12.0",
    "zstandard==0.25.0",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "langgraph",
    "langgraph-checkpoint-sqlite",
    "aiosqlite",
    "python-dotenv",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "langchain-ollama",
    "langchain-community",
    "ollama",
    "faiss-cpu",
    "pytest",
    "pytest-asyncio",
]
